# EveryPaste

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/clipboard/: mod.rs  models.rs  monitor.rs
src-tauri/src/commands/: handlers.rs  mod.rs
src-tauri/src/config/: mod.rs  settings.rs
src-tauri/src/storage/: database.rs  mod.rs
src-tauri/src/tray/: mod.rs
src/scripts/: main.js
src/styles/: main.css
src/styles/themes/: dark.css  light.css
