[package]
name = "everypaste"
version = "0.1.0"
description = "EveryPaste - 极致轻量化的剪贴板管理工具"
authors = ["EveryPaste Team"]
edition = "2021"
license = "MIT"
repository = "https://github.com/everypaste/everypaste"

[lib]
name = "everypaste_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri 核心
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 数据库
rusqlite = { version = "0.31", features = ["bundled"] }

# 剪贴板
arboard = "3"
clipboard-win = "5"

# 图片处理
image = "0.25"
base64 = "0.22"

# 异步运行时
tokio = { version = "1", features = ["full"] }

# 工具
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dirs = "5"
once_cell = "1"
parking_lot = "0.12"
blake3 = "1"
thiserror = "1"

# Windows API
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse"] }
log = "0.4"
env_logger = "0.11"

[profile.release]
# 优化发布版本大小
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"
